# todos

./: Cargo.toml  README.md  uninstall.sh  update_or_install.sh
src/: config.rs  graph.rs  home.rs  main.rs  node.rs
