[package]
name = "todos"
version = "0.1.0"
authors = ["Nelson Penn <nelsonapenn@protonmail.com>"]
edition = "2018"
debug = 2

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
dirs = "3.0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
